--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     </header>
     <nav>
         <a href="#home">Home</a>
+        <a href="#resume">Resume</a>
+        <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact">Contact</a>
     </nav>
     <div class="container">
         <section id="home" class="section">
@@ -38,7 +42,9 @@
             <h2>Projects</h2>
             <p>Here are some of the cybersecurity projects I have worked on:</p>
             <ul>
-                <li>Z Corp Project - Developed and implemented security protocols to protect company data from cyber threats. The Business Server Infrastructure and Network Diagram for ZCorp illustrates various components and their interconnections. This diagram serves a crucial purpose: it enables stakeholders to visualize the complex relationships within the network. However, understanding these intricacies can be challenging. The infrastructure consists of multiple servers (1), routers and firewalls, each playing a vital role. Although these elements are essential, their configurations may sometimes lead to confusion among team members. But, with a clear diagram, such misunderstandings can be minimized. Because of the importance of this visualization, it becomes easier to identify potential issues and streamline operations. Overall, the diagram is an essential tool for effective network management, facilitating communication and coordination among departments.</li>
+                <li>Project 1 - Description of what you did.</li>
+                <li>Project 2 - Description of skills used.</li>
+                <li>Z Corp Project - Developed and implemented security protocols to protect company data from cyber threats.</li>
             </ul>
         </section>
         <section id="experience" class="section">
